--- a/.config/i3/config
+++ b/.config/i3/config
@@ -172,7 +172,7 @@ bindsym $mod+Shift+a                exec --no-startup-id $term -e "alsamixer -c 
 bindsym $mod+Shift+m                exec --no-startup-id $browser
 
 bindsym $mod+d                      exec --no-startup-id rofi -show run
-bindsym $mod+p                      exec --no-startup-id rofimoji -p
+bindsym $mod+p                      exec --no-startup-id rofimoji
 bindsym $mod+Shift+d                exec --no-startup-id rofi -show window
 bindsym $mod+c                      exec --no-startup-id rofi -show calc -modi calc -no-show-match -no-sort
 
