--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,7 +21,7 @@ unbind '"'
 unbind %
 
 # fix terminal color issue
-set -ga terminal-overrides ",xterm-termite:Tc"
+set -ga terminal-overrides ",alacritty:tc"
 
 # disable renaming window automatically
 set -g allow-rename off
