--- a/.config/i3/config
+++ b/.config/i3/config
@@ -210,3 +210,7 @@ bindsym XF86MonBrightnessDown       exec --no-startup-id xbacklight -dec 20
 bindsym XF86AudioMute               exec --no-startup-id pactl set-sink-mute 0 toggle
 bindsym XF86AudioRaiseVolume        exec --no-startup-id pactl set-sink-volume 0 +5%
 bindsym XF86AudioLowerVolume        exec --no-startup-id pactl set-sink-volume 0 -5%
+
+bindsym Control+space               exec --no-startup-id dunstctl close
+bindsym Control+Shift+space         exec --no-startup-id dunstctl close-all
+bindsym Control+grave               exec --no-startup-id dunstctl history-pop
