--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -12,10 +12,11 @@ line-size = 2
 border-top-size = 4
 border-color = ${xrdb:background}
 
+padding-left = 2
 padding-right = 2
 
 module-margin-left = 1
-module-margin-right = 2
+module-margin-right = 1
 
 font-0 = Meslo LG S DZ for Powerline:size=8
 font-1 = FontAwesome:size=10
