--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -19,7 +19,9 @@ module-margin-left = 1
 module-margin-right = 1
 
 font-0 = Meslo LG S DZ for Powerline:size=8
-font-1 = FontAwesome:size=10
+font-1 = Font Awesome 6 Free Regular:pixelsize=10;1
+font-2 = Font Awesome 6 Free Solid:pixelsize=10;1
+font-3 = Font Awesome 6 Brands:pixelsize=10;1
 
 modules-left = i3
 modules-center = date
