--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -120,24 +120,17 @@ label = %date% %time%
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix-foreground = ${xrdb:color4}
-format-volume = <label-volume> <bar-volume>
+format-volume = <ramp-volume> <label-volume>
 label-volume = %percentage%%
-label-volume-foreground = ${root.foreground}
 
-label-muted = muted
+label-muted = 
 label-muted-foreground = ${xrdb:color1}
 
-bar-volume-width = 10
-bar-volume-foreground-0 = ${xrdb:color4}
-bar-volume-gradient = false
-bar-volume-indicator = █
-bar-volume-indicator-font = 2
-bar-volume-fill = ─
-bar-volume-fill-font = 2
-bar-volume-empty = ─
-bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${xrdb:color8}
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
+
+ramp-volume-foreground = ${xrdb:color4}
 
 [module/battery]
 type = internal/battery
