--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -23,9 +23,9 @@ font-1 = Font Awesome 6 Free Regular:pixelsize=10;1
 font-2 = Font Awesome 6 Free Solid:pixelsize=10;1
 font-3 = Font Awesome 6 Brands:pixelsize=10;1
 
-modules-left = i3
-modules-center = date
-modules-right = fs-root fs-home pulseaudio wlan eth battery
+modules-left = wlan eth
+modules-center = i3
+modules-right = fs-root fs-home pulseaudio battery date
 
 [fs-base]
 type = internal/fs
