--- a/.tmux.conf
+++ b/.tmux.conf
@@ -68,6 +68,7 @@ set -g @plugin 'tmux-plugins/tpm'
 
 # plugin
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-strategy-nvim 'session'
 
 # run tpm
 run -b '~/.tmux/plugins/tpm/tpm'
