Edit coc diagnostic sign

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -22,8 +22,8 @@
   "emmet.includeLanguages": {
     "javascript": "javascriptreact"
   },
-  "diagnostic.hintSign": " ",
-  "diagnostic.infoSign": " ",
-  "diagnostic.warningSign": " ",
-  "diagnostic.errorSign": " "
+  "diagnostic.hintSign": " ",
+  "diagnostic.infoSign": " ",
+  "diagnostic.warningSign": " ",
+  "diagnostic.errorSign": " "
 }
