--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -50,7 +50,7 @@ ws-icon-0 = 1;
 ws-icon-1 = 2;
 ws-icon-2 = 3;
 ws-icon-3 = 4;
-ws-icon-default = 
+ws-icon-default = 
 
 format = <label-state> <label-mode>
 index-sort = true
