--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -8,25 +8,28 @@ font:
   normal:
     family: Meslo LG S DZ for Powerline
   size: 9
-colors: # dracula theme
+colors: # tokyonight theme
   primary:
-    background:  '#282a36'
-    foreground:  '#f8f8f2'
+    background: '#24283b'
+    foreground: '#c0caf5'
   normal:
-    black:       '#000000'
-    red:         '#ff5555'
-    green:       '#50fa7b'
-    yellow:      '#f1fa8c'
-    blue:        '#bd93f9'
-    magenta:     '#ff79c6'
-    cyan:        '#8be9fd'
-    white:       '#bfbfbf'
+    black: '#1D202F'
+    red: '#f7768e'
+    green: '#9ece6a'
+    yellow: '#e0af68'
+    blue: '#7aa2f7'
+    magenta: '#bb9af7'
+    cyan: '#7dcfff'
+    white: '#a9b1d6'
   bright:
-    black:       '#575b70'
-    red:         '#ff6e67'
-    green:       '#5af78e'
-    yellow:      '#f4f99d'
-    blue:        '#caa9fa'
-    magenta:     '#ff92d0'
-    cyan:        '#9aedfe'
-    white:       '#e6e6e6'
+    black: '#414868'
+    red: '#f7768e'
+    green: '#9ece6a'
+    yellow: '#e0af68'
+    blue: '#7aa2f7'
+    magenta: '#bb9af7'
+    cyan: '#7dcfff'
+    white: '#c0caf5'
+  indexed_colors:
+    - { index: 16, color: '#ff9e64' }
+    - { index: 17, color: '#db4b4b' }
