--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,15 +42,15 @@ set -g status-style fg=colour4
 
 # status line left side
 set -g status-left-length 40
-set -g status-left "#[fg=green,bold,reverse] #S #[default] "
+set -g status-left "#[fg=colour16,bold,reverse] #S #[default] "
 
 # status line right side
 set -g status-right-length 60
-set -g status-right "#[fg=green,bold,reverse] #{host} "
+set -g status-right "#[fg=colour16,bold,reverse] #{host} "
 
 # status line unfocused and focused window
 set-window-option -g window-status-style fg=colour239
-set-window-option -g window-status-format '#[fg=green,bold]#I#[default]:#W'
+set-window-option -g window-status-format '#[fg=colour16,bold]#I#[default]:#W'
 set-window-option -g window-status-current-style fg=blue,bold
 set-window-option -g window-status-current-format '#I:#W'
 
