--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -82,7 +82,7 @@ label-urgent-padding = ${self.label-focused-padding}
 
 [module/wlan]
 type = internal/network
-interface = wlp3s0
+interface-type = wireless
 interval = 1
 
 format-connected = <ramp-signal> <label-connected>
@@ -100,7 +100,7 @@ ramp-signal-2-foreground = ${xrdb:color2}
 
 [module/eth]
 type = internal/network
-interface = enp2s0
+interface-type = wired
 interval = 1
 
 format-connected-prefix = "eth "
