--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,10 +11,14 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# vim-like selection
+# credits: https://superuser.com/a/1151663
+bind-key -T copy-mode-vi v   send -X begin-selection
+bind-key -T copy-mode-vi V   send -X select-line
+bind-key -T copy-mode-vi C-v send -X rectangle-toggle
+
 # copy from buffer to clipboard
-set-option -s set-clipboard off
-bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
-bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "xclip -sel c -i"
+bind-key -T copy-mode-vi y   send -X copy-pipe-and-cancel 'xclip -selection clipboard'
 
 # disable keys
 unbind '"'
